diverse prove funzionanti aggiunte sotto commento